--- a/BlueLibrary/Main.storyboard
+++ b/BlueLibrary/Main.storyboard
@@ -23,6 +23,7 @@
                         <subviews>
                             <navigationBar contentMode="scaleToFill" backIndicatorImage="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="VWf-2P-pWV">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <gestureRecognizers/>
                                 <items>
                                     <navigationItem title="Album" id="oey-Af-Pea">
                                         <barButtonItem key="backBarButtonItem" title="Back" id="sSM-pz-Cur"/>
@@ -47,6 +48,7 @@
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Jz6-L5-y90" firstAttribute="top" secondItem="1ro-Oy-pQM" secondAttribute="bottom" id="5aa-Yn-Ti9"/>
                             <constraint firstItem="ekj-qU-dTf" firstAttribute="leading" secondItem="MX5-uo-AVh" secondAttribute="leading" id="DcH-Cs-9HD"/>
@@ -59,6 +61,9 @@
                             <constraint firstAttribute="trailing" secondItem="1ro-Oy-pQM" secondAttribute="trailing" id="u0a-Z7-1aJ"/>
                             <constraint firstItem="VWf-2P-pWV" firstAttribute="top" secondItem="ElU-bh-dOI" secondAttribute="bottom" id="uF2-Jm-GhR"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="aEj-84-dTo" appends="YES" id="IfQ-Dz-YMc"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="addAlbumForm" destination="ekj-qU-dTf" id="eAp-AT-gbE"/>
@@ -66,6 +71,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c4s-IP-i38" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="aEj-84-dTo">
+                    <connections>
+                        <action selector="hideKeyboard:" destination="07o-53-Z6l" id="b7R-Mv-yrQ"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-15.199999999999999" y="146.17691154422789"/>
         </scene>
@@ -161,7 +171,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <datePicker tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="qBm-gT-yMP">
-                                                    <rect key="frame" x="-1" y="38" width="319" height="161"/>
+                                                    <rect key="frame" x="-2" y="38" width="319" height="161"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="522045637.973548">
                                                         <!--2017-07-18 04:40:37 +0000-->
